# sub-magazines

./: CHANGELOG.md  README.md  sub-magazines.cabal
.github/workflows/: cronjob.yml  haskell.yml
app/: Main.hs
lib/: Auth.hs  Data.hs  Email.hs  Github.hs
lib/github/: Data.hs  Github.hs
src/app/: Main.hs
src/lib/: Auth.hs  Data.hs  Email.hs  Github.hs  Util.hs
test/: Common.hs  DataSpec.hs  Spec.hs  UtilSpec.hs
