cabal-version:      2.4
name:               sub-magazines
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             xieyuschen 
maintainer:         xieyuschen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-depends
    build-depends:
        base >= 4.14 && < 4.17
        , mtl
        , transformers
        -- http request is needed
        , http-conduit
        , http-client
        , http-types
        , http-client-tls
        -- analysis json
        , aeson
        , text
        , time


library lib-github
    import: common-depends 
    build-depends:
        unliftio
    exposed-modules:
        Github,
        Data
    hs-source-dirs: lib/github
    default-language: Haskell2010

library lib
    import: common-depends 
    exposed-modules:
        Auth
    hs-source-dirs: lib
    default-language: Haskell2010

executable sub-magazines
    import: common-depends 
    main-is:          Main.hs
    build-depends:    
        lib
        , lib-github
    hs-source-dirs:   app
    default-language: Haskell2010
