cabal-version:      2.4
name:               sub-magazines
version:            1.0.1

author:             xieyuschen 
maintainer:         xieyuschen@gmail.com

extra-source-files: CHANGELOG.md

common common-depends
    build-depends:
        base >= 4.14 && < 4.17
        , mtl
        , transformers
        -- http request is needed
        , http-conduit
        , http-client
        , http-types
        , http-client-tls
        -- analysis json
        , aeson
        , text
        , time
        , smtp-mail
        , mime-mail
        , bytestring
        , utf8-string
        , co-log-core
        , unliftio
        , co-log

library utility
    import: common-depends
    exposed-modules:
        Auth
        , Github
        , Email
        , Data
        , Util 
    hs-source-dirs: src/lib
    
    default-language: Haskell2010

executable sub-magazines
    import: common-depends 
    main-is:          Main.hs
    build-depends:    
        utility
    hs-source-dirs:   src/app
    default-language: Haskell2010
