cabal-version:      2.4
name:               sub-magazines
version:            1.1.0

author:             xieyuschen 
maintainer:         xieyuschen@gmail.com

extra-source-files: CHANGELOG.md

common common-depends
    build-depends:
        base >= 4.14 && < 4.17
        , mtl
        , transformers
        -- http request is needed
        , http-conduit
        , http-client
        , http-types
        , http-client-tls
        -- analysis json
        , aeson
        , text
        , time
        , smtp-mail >= 0.3.0.0
        , mime-mail >= 0.5.0
        , bytestring
        , utf8-string
        , co-log-core
        , unliftio
        , co-log

library utility
    import: common-depends
    exposed-modules:
        Auth
        , Github
        , Email
        , Data
        , Util 
    hs-source-dirs: src/lib
    
    default-language: Haskell2010

executable sub-magazines
    import: common-depends 
    main-is:          Main.hs
    build-depends:    
        utility
    hs-source-dirs:   src/app
    default-language: Haskell2010

test-suite spec
  import: common-depends 
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   Haskell2010
  main-is:            Spec.hs
  ghc-options:        -Wall
  build-depends:
    , hspec
    , QuickCheck
    , quickcheck-instances
    , utility
  other-modules:
    DataSpec,
    UtilSpec,
    Common
  build-tool-depends: hspec-discover:hspec-discover